# md-editor

./: .gitignore  README.ja.md  README.md  index.html  mdedit v1_1 機能追加改修計画.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: architecture.ja.md  architecture.md
docs/assets/: PLACEHOLDER.md
docs/superpowers/specs/: 2026-06-07-context-menu-design.md  2026-06-07-tab-context-menu-and-windowing-design.md
skills/presentation-md/: SKILL.md
skills/presentation-md/assets/: template.md
skills/presentation-md/references/: slide-syntax.md
src/: about-modal.ts  actions.ts  blank-lines.ts  chat-panel.ts  chat-proposal.test.ts  chat-proposal.ts  color-palette.ts  context-menu.ts  diagram-viewer.ts  diff.test.ts  diff.ts  doc-styles.ts  edit-ops.ts  editor-context-menu.ts  editor.ts  embed-images.ts  exporter-lazy.ts  exporter.ts  find-replace.ts  footnote-nav.ts  footnote-pair.test.ts  footnote-pair.ts  format-commands.ts  gantt-schedule.test.ts  gantt-schedule.ts  heading-fold.ts  highlight.test.ts  highlight.ts  i18n.ts  image-edit.ts  image-persist.test.ts  image-persist.ts  image-resolver.ts  image-row.test.ts  image-row.ts  line-numbers.ts  list-fold.ts  main.ts  markdown-it-highlight.test.ts  markdown-it-highlight.ts  (+54 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: assoc.rs  chat.rs  commands.rs  i18n.rs  lib.rs  menu.rs  recent.rs  startup.rs  tabwin.rs  usage.rs
src/styles/: document.css  presentation.css  print.css
